Scrollbar screen jump Fix

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  margin-left: calc(100vw - 100%);
   padding: 0;
   font-family: sans-serif;
 }
